[package]
name = "basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk="^1.3"
mlua = { version = "0.8.7", features = ["lua54", "vendored", "serialize"] }
serde = {version="1.0.152", features=["derive"]}
fltk-table = "0.2.1"
lua-src = "544.0.1"


[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*